# AquaSkim-Sim

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README_FA.md  environment.yml  pyproject.toml
cad/: README.md
config/: base_parameters.yaml  maneuver_protocol.yaml  parameter_registry.yaml  phase09_2_scenarios.yaml  phase09_scenarios.yaml  reference_control_robustness.yaml  reference_control_visualisation.yaml  reference_design.yaml  reference_operating_envelope.yaml  reference_operating_visualisation.yaml  reference_payload_maneuver_validation.yaml  reference_payload_maneuver_visualisation.yaml  reference_presentation_curation.yaml  reference_release_gate.yaml  reference_system_validation.yaml  reference_system_visualisation.yaml  reference_visualisation.yaml  report_metadata.template.json  user_profile.example.yaml  user_profile.template.yaml
docs/: 00_PROJECT_CONTRACT.md  01_PHASE_01_OVERVIEW.md  02_PHASE_02_MECHANICAL_ARCHITECTURE.md  ASSUMPTIONS_REGISTER.md  BUILD_WORKFLOW_STATUS.md  COMMANDS_WINDOWS.md  CONFIGURATION_AND_GITHUB_REPRODUCIBILITY.md  FOLDER_CONTRACT.md  GITHUB_PUBLICATION_CHECKLIST.md  LEGACY_PIPELINE_ISOLATION.md  MANEUVER_VERIFICATION_PROTOCOL.md  MODELING_AND_VALIDATION.md  MODEL_SCOPE_AND_LIMITATIONS.md  ONE_COMMAND_REBUILD.md  OUTPUT_PREVIEWS.md  PATCH_04_EXECUTION_RUNBOOK.md  PATCH_05_EXECUTION_RUNBOOK.md  PATCH_06_EXECUTION_RUNBOOK.md  PATCH_10_EXECUTION_RUNBOOK.md  PATCH_PROTOCOL.md  PHASE_02_VALIDATION.md  PHASE_02_VISUAL_QA.md  PHASE_10_14_PAYLOAD_MANEUVER_VALIDATION.md  PROJECT_OVERVIEW.md  (+9 more)
(+365 files in other folders)
